Updated images path

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <table cellspacing="20">
         <tr>
             <td>
-                <img src="profile_picture.png" alt="Rajesh's profile picture" width="200" height="200">
+                <img src="Images/profile_picture.png" alt="Rajesh's profile picture" width="200" height="200">
             </td>
             <td>
                 <h1>Welcome to Rajesh's World</h1>
